--- a/meta/course-guide.tex
+++ b/meta/course-guide.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper]{article}
 
 \usepackage[margin=3cm]{geometry}
-\usepackage{multirow}
+%\usepackage{multirow}
 \usepackage[nooneline,hang,it]{caption2}
 
 \begin{document}
