--- a/exams/2012-08-21/itads-exam-2012-08-21.tex
+++ b/exams/2012-08-21/itads-exam-2012-08-21.tex
@@ -172,7 +172,7 @@ Consider the following four pseudo-code fragments A, B, C, and D:\\
 \vspace{\baselineskip}
 
 For each of those code fragments, choose which algorithm name from the table below best corresponds to what the fragment does, and mark its letter \emph{(A, B, C, or D)} in the space on the right.
-Mark algorithms which are not shown in any pseudo-code with a big \textbf{X}.
+Mark algorithms which are not shown in any pseudo-code with a big X.
 
 \begin{center}
   \begin{tabular}{|l|p{0.3\columnwidth}|}
@@ -199,18 +199,104 @@ Mark algorithms which are not shown in any pseudo-code with a big \textbf{X}.
 
 \question{4 points}
 
-DRAFT!\\
-match ds diagrams with java code (and maybe usage scenarios?)
-\begin{itemize}
-\item circular linked list (task scheduling?)
-\item child/sibling tree (language parsing?)
-\item adjacency matrix (air travel planning?)
-\end{itemize}
+An array contains \emph{N} numbers, and you want to determine whether two numbers sum to a given number \emph{K}.
+For instance, if the input array contains numbers \{8, 4, 1, 6\} and $K = 10$, then the answer is yes (becuase $4 + 6 = 10$).
+
+\begin{enumerate}
+\item
+  Write the code for a function that performs this task.
+\item
+  Give an execution time analysis of your method.
+\item
+  Recall that there are algorithms for sorting arrays that are $O(N \log N)$.
+  Use this fact to write a new version of your program that is $O(N \log N)$.
+  Proceed by first sorting the array and then doing some linear extra work.
+  
+  \emph{\underline{Notice:} you do \textbf{not} need to implement sort, assume that it is already implemented.
+  Your updated code can simply call a function called \texttt{sort(a)}, where \texttt{a} holds the array.}
+\end{enumerate}
 
 
 \clearpage
 
-\question{4 points}
+\question{3 points}
+
+The ternary number system expresses numbers as sums of powers of 3, in the same way that the decimal system uses powers of 10 and the binary system uses powers of 2.
+In ternary, one can use the digits $d_i \in \{0, 1, 2\}$ to compose a number $t$ with $N$ digits using the formula $t = \sum_{i=0}^{N-1} d_i \times 3^i$.
+To write a ternary number, the digits are simply stringed together from the most significant $d_{N-1}$ down to the least significant $d_0$.
+To illustrate, the following table lists ten numbers written in decimal and ternary:\\
+
+\begin{tabular}{|l|r|r|r|r|r|r|r|r|r|r|}
+  \hline
+  decimal & 0 & 1 &  2 &  3 &   4 &   5 &   6 &   7 &    8 &   9 \\
+  \hline
+  ternary & 0 & 1 &  2 & 10 &  11 &  12 &  20 &  21 &   22 &  100 \\
+  \hline
+\end{tabular}
+\vspace{0.5\baselineskip}
+
+Take for example the ternary 12: it has 2 digits, namely $d_1=1$ and $d_0=2$.
+Substituting these into the general formula above yields $t = d_1 \times 3^1 + d_0 \times 3^0 = 1 \times 3 + 2 \times 1 = 5$.
+
+\begin{enumerate}
+\item
+  Write a \emph{recursive} function that prints a given number in ternary.
+  In other words, your function should take a single number as argument, and convert it to a string of digits that represent that number in ternary.
+\item
+  What is the Big-Oh runtime complexity of your function, as a function of the number of decimal digits required to express the number?
+\end{enumerate}
+
+
+
+\clearpage
+
+\question{3 points}
+
+\begin{minipage}[b]{0.6\columnwidth}
+  The \emph{Tower of Hanoi} puzzle consists of three rods and a number of disks of different sizes which can slide onto any rod.
+  The puzzle starts with the disks in a neat stack in ascending order of size on one rod, the smallest at the top, thus making a conical shape.
+  
+  The objective of the puzzle is to move the entire stack to another rod, obeying the following rules:
+\end{minipage}
+\hfill
+\includegraphics[width=0.35\columnwidth]{Tower_of_Hanoi}
+
+\begin{itemize}
+\item
+  Only one disk may be moved at a time.
+\item
+  Each move consists of taking the upper disk from one of the rods and sliding it onto another rod, on top of the other disks that may already be present on that rod.
+\item
+  No disk may be placed on top of a smaller disk.
+\end{itemize}
+
+\footnotesize
+\hfill
+[Text and photo adapted from Wikipedia.]
+\normalsize
+
+\begin{enumerate}
+\item
+  Write a \emph{recursive} function that prints the moves required to solve the \emph{Tower of Hanoi} puzzle for any number of disks.
+  
+  The disks are numbered from the top down starting at 1 (the smallest disk) and the three rods are labelled A, B, and C.
+  The arguments to your function should be the number of disks, which rod to start from, and which rod to go to.
+  The output of your function should look like this (for a stack of 2 disks to move from A to B):
+\begin{verbatim}
+     disk 1 from A to C
+     disk 2 from A to B
+     disk 1 from C to B
+\end{verbatim}
+
+\item
+  Give a mathematical formula for computing the number of moves required to solve the \emph{Tower of Hanoi} puzzle.
+  
+\end{enumerate}
+
+
+\clearpage
+
+\question{5 points}
 
 One of your friends is writing an application that frequently has to find out if a number has been encountered before.
 Your friend decided to use a binary search tree to store the set of numbers, because of its fast element lookup.
@@ -228,16 +314,12 @@ Answer the following questions to explain the problem and the solution:
 \item
   Explain why lookups are now slower, and propose a solution to the problem.
 \item
-  Write down the crucial part of your solution in pseudo-code (you can choose to imitate the style of code used in question 1, or provide something closer to Java).
+  Write down the crucial part of your solution in pseudo-code.
+  
+  \emph{\underline{Notice:} the solution requires just one function.
+    To implement that function you need a queue, which you can assume to be available already (similar to fragment C of question 1).
+    You can use Java or the same style of pseudo-code as in question 1.}
 \end{enumerate}
-
-
-\clearpage
-
-\question{3 points}
-
-DRAFT!\\
-manually run sequence alignment with two different cost tables, make them enumerate all alignments that have the same cost (make sure one of the examples has more than one minimum)
 
 
 \clearpage
@@ -246,8 +328,16 @@ manually run sequence alignment with two different cost tables, make them enumer
 
 Answer the following questions about the computational complexity of various algorithms, where $N$ denotes the problem size.\\
 \emph{
-  You do not need a calculator.
-  And there is a convenient lookup table for powers of $2$ at the bottom of this page.}
+  \underline{Notice:} you do not need a calculator.
+  To help with some of the computations, you can use this convenient lookup table for powers of $2$:}
+
+\begin{tabular}{|l|r|r|r|r|r|r|r|r|r|r|r|r|r|r|r|}
+  \hline
+  $x=$   & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14 \\
+  \hline
+  $2^x=$ & 1 & 2 & 4 & 8 & 16 & 32 & 64 & 128 & 256 & 512 & 1024 & 2048 & 4096 & 8192 & 16384 \\
+  \hline
+\end{tabular}
 
 \begin{enumerate}
 \item
@@ -267,38 +357,6 @@ Answer the following questions about the computational complexity of various alg
   \small
   \verbatimtabinput{function4.txt}
   \normalsize
-\end{enumerate}
-
-\vfill
-
-\begin{tabular}{|l|r|r|r|r|r|r|r|r|r|r|r|r|r|r|r|}
-  \hline
-  $x=$   & 0 & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14 \\
-  \hline
-  $2^x=$ & 1 & 2 & 4 & 8 & 16 & 32 & 64 & 128 & 256 & 512 & 1024 & 2048 & 4096 & 8192 & 16384 \\
-  \hline
-\end{tabular}
-
-
-\clearpage
-
-\question{6 points}
-
-An array contains \emph{N} numbers, and you want to determine whether two numbers sum to a given number \emph{K}.
-For instance, if the input array contains numbers \{8, 4, 1, 6\} and $K = 10$, then the answer is yes (becuase $4 + 6 = 10$).
-
-\begin{enumerate}
-\item
-  Write the code for a function that performs this task.
-\item
-  Give an execution time analysis of your method.
-\item
-  Recall that there are algorithms for sorting arrays that are $O(N \log N)$.
-  Use this fact to write a new version of your program that is $O(N \log N)$.
-  Proceed by first sorting the array and then doing some linear extra work.
-  
-  \textbf{Notice:} You do \textbf{not} need to implement sort, assume that it is already implemented.
-  Your updated code can simply call a function called \texttt{sort(a)}, where \texttt{a} holds the array.
 \end{enumerate}
 
 
