there was a typo in a question, and I had forgot to add that source file to the repos anyway

--- a/exams/2012-08-21/itads-exam-2012-08-21.tex
+++ b/exams/2012-08-21/itads-exam-2012-08-21.tex
@@ -353,7 +353,8 @@ Answer the following questions about the computational complexity of various alg
   How big of a problem can be expected to be completed in $10.24s$?
 \item
   What is the runtime $T_4(N)$ and the Big-Oh complexity of \texttt{function4} in the following Java code fragment?
-  Note that the method \texttt{f\_1ms} always requires $1ms$ to run, and the method \texttt{f\_3ms} always takes $3ms$.
+  Note that the method \texttt{f\_1ms} always requires $1ms$ to run, and the method \texttt{f\_3ms} always takes $3ms$.\\
+  \textbf{\emph{CORRECTION:} there was a copy-paste error in the version of \texttt{recurse} handed to the students at the exam, so they all got full points regardless of their answer.}
   \small
   \verbatimtabinput{function4.txt}
   \normalsize
