updated schedule, tweak k+r reading list

--- a/meta/course-guide.tex
+++ b/meta/course-guide.tex
@@ -90,13 +90,38 @@ Here is a summary of the most important points, with some additional explanation
 
 \begin{table}
   \centering
-  \begin{tabular}{c|ll}
+  \begin{tabular}{|cll|}
+    \hline
     \emph{week} & \multicolumn{2}{l}{\emph{lecture (L) / exercises (E) / project (P)}} \\
     \hline
-    1 &
-    L1 &
-    overview, introduction to \ldots
-    \\
+    36 & L1 & overview, C tutorial \\
+       & E1 & types, variables, operators, control flow \\
+       & E2 & arrays, pointers, strings \\
+    \hline
+    37 & L2 & functions, structs, lists, stacks, queues \\
+       & E3 & functions and structs \\
+       & E4 & lists, stacks, queues  \\
+    \hline
+    38 & L3 & sorting, trees, heaps, priority queues \\
+       & E5 & sorting, trees \\
+       & E6 & heaps, priority queues \\
+    \hline
+    39 & L4 & complexity analysis, intro to projects \\
+       & E7 & complexity analysis \\
+       & P1 & sorting algorithm benchmarks \\
+    \hline
+    40 & L5 & divide \& conquer, memoization \\
+       &    & \emph{continue with P1} \\
+    \hline
+    41 & L6 & dynamic programming \\
+       & E8 & dynamic programming \\
+       & P2 & sequence alignment \\
+    \hline
+    42 & L7 & project discussion, graphs \\
+       &    & \emph{continue with P2} \\
+    \hline
+    43 & L8 & review and exam preparations \\
+       & E9 & graphs \\
     \hline
   \end{tabular}
   \caption{Schedule overview.}\label{tab:schedule}
@@ -128,9 +153,7 @@ For the projects, participants work in teams of 2 (or 3 in case of an odd total 
     1.1--10            & $\circ$ & $\star$ &         & \\
     \hline
 %%    \multicolumn{6}{l}{\textbf{2.\ Types, Operators, and Expressions}} \\
-    2.1--2             & $\star$ &         &         & \\
-    2.3                & $\circ$ &         &         & $\star$ \\
-    2.4--8, 2.10       & $\star$ &         &         & \\
+    2.1--8, 2.10       & $\star$ &         &         & \\
     2.11--12           &         &         &         & $\star$ \\
     \hline
 %%    \multicolumn{6}{l}{\textbf{3.\ Control Flow}} \\
@@ -157,8 +180,7 @@ For the projects, participants work in teams of 2 (or 3 in case of an odd total 
     6.1--4, 6.7        &         & $\star$ &         & \\
     \hline
 %%    \multicolumn{6}{l}{\textbf{7.\ Input and Output}} \\
-    7.1                & $\star$ &         &         & \\
-    7.2                & $\circ$ &         & $\star$ & \\
+    7.1--2             & $\star$ &         &         & \\
     7.4--6             &         &         & $\star$ & \\
     \hline
   \end{tabular}
