of course it was not good enough

--- a/meta/course-guide.tex
+++ b/meta/course-guide.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper]{article}
 
 \usepackage[margin=3cm]{geometry}
-\usepackage{xspace}
+\usepackage{xspace,amsmath}
 \usepackage[nooneline,hang,it]{caption2}
 
 \newcommand{\refl}{\textbf{[L]}\xspace}
@@ -63,7 +63,10 @@ Here is a summary of the most important points, with some additional explanation
     
   \item \refl
     \emph{
-      Loudon, Kyle. \textbf{Mastering Algorithms with C}. O'Reilly \& Associates, 1999.
+      Loudon, Kyle.
+      \textbf{Mastering Algorithms with C}.
+      O'Reilly \& Associates, 1999.
+      ISBN 978-1-56592-453-6
     }
     
   This book forms an integral part of the course.
@@ -76,7 +79,10 @@ Here is a summary of the most important points, with some additional explanation
   
   \item \refkr
     \emph{
-      Kernighan, Brian W., Ritchie, Dennis M. \textbf{The C Programming Language}. Prentice Hall, 1989.
+      Kernighan, Brian W., Ritchie, Dennis M.
+      \textbf{The C Programming Language, \emph{Second Edition}}.
+      Prentice Hall, 1989.
+      ISBN 0-13-110362-8
     }
     
     This classical textbook forms an integral part of the C refresher during the first few weeks of the course.
@@ -148,7 +154,7 @@ For the projects, participants work in teams of 2 (or 3 in case of an odd total 
   \begin{tabular}{|l|c|c|c|c|}
     \hline
     \multicolumn{5}{|c|}{\refkr Kernighan \& Ritchie} \\
-    \multicolumn{5}{|c|}{\emph{The C Programming Language}} \\
+    \multicolumn{5}{|c|}{\emph{The C Programming Language, $2^\text{nd}$ Ed.}} \\
     \hline
                        & \multicolumn{4}{|c|}{\emph{week}} \\
     section            & 36      & 37      & 38      & 39 \\
@@ -233,7 +239,7 @@ For the projects, participants work in teams of 2 (or 3 in case of an odd total 
 \end{table}
 
 Below is an approximately chronological list of the sections that the students should study from the course books.
-\refkr refers to Kernighan \& Ritchie \emph{The C Programming Language}, and \refl refers to Loudon \emph{Mastering Algorithms with C}.
+\refkr refers to Kernighan \& Ritchie \emph{The C Programming Language ($2^\text{nd} Ed.)$}, and \refl refers to Loudon \emph{Mastering Algorithms with C}.
 Table~\ref{tab:reading-guide} summarizes which section will be treated in which week, and to what extent.
 The course website provides resources in form of exercises and links to books and other websites.
 
