input order dependence benchmarks (bonus tasks)

--- a/proj1-sol/documents/itads2012-project1.tex
+++ b/proj1-sol/documents/itads2012-project1.tex
@@ -12,6 +12,7 @@
   Assignment for Project 1: Sorting Algorithms Benchmarks\\
 }
 \author{
+  Roland Philippsen\\
   \texttt{roland.philippsen@hh.se}
 }
 \maketitle
